--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/idle black-Sheet.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/platform/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/whitePlayer.tscn")
-current_scene="res://scenes/game.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/whitePlayer.tscn", "res://scenes/killzone.tscn")
+current_scene="res://scenes/whitePlayer.tscn"
 center_split_offset=-463
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://script/whitePlayer.gd"]
+open_scripts=["res://script/dash.gd", "res://script/killzone.gd", "res://script/Timer.gd", "res://script/whitePlayer.gd"]
 selected_script="res://script/whitePlayer.gd"
 open_help=[]
 script_split_offset=70
