--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/whitePlayer.tscn", "res://scenes/killzone.tscn")
-current_scene="res://scenes/whitePlayer.tscn"
+current_scene="res://scenes/game.tscn"
 center_split_offset=-463
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
