fix killzone collection for shadow

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -40,3 +40,7 @@ scripts=["res://script/dash.gd", "res://script/Timer.gd", "res://script/killzone
 [script_setup]
 
 last_selected_language="GDScript"
+
+[scripts_panel]
+
+show_scripts_panel=true
