--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/whitePlayer.tscn", "res://scenes/killzone.tscn")
-current_scene="res://scenes/game.tscn"
+current_scene="res://scenes/whitePlayer.tscn"
 center_split_offset=-463
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -53,7 +53,7 @@ selected_shader=""
 log_filter_0=true
 log_filter_2=true
 log_filter_1=true
-log_filter_3=true
+log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
