--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -25,10 +25,11 @@ TileMap:scale=true
 RayCast2D:scale=true
 MultiNodeEdit:scale=true
 Area2D:scale=true
+Label:scale=true
 
 [dialog_bounds]
 
-create_new_node=Rect2(944, 448, 900, 700)
+create_new_node=Rect2(2139, 481, 900, 700)
 project_settings=Rect2(365, 205, 900, 700)
 search_help=Rect2(2400, 283, 960, 540)
 
