--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/platform/door.png")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/platform/PixelOperator8.ttf")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/platform/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/whitePlaye
 current_scene="res://scenes/game.tscn"
 center_split_offset=-463
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
 open_scripts=["res://script/dash.gd", "res://script/killzone.gd", "res://script/Timer.gd", "res://script/whitePlayer.gd"]
-selected_script="res://script/killzone.gd"
+selected_script="res://script/whitePlayer.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
